--- a/.gitignore
+++ b/.gitignore
@@ -322,5 +322,24 @@ modules.xml
 .history
 .ionide
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,clion,clion+iml,clion+all,visualstudiocode
 
